настроил запуск тестов сразу для двух приложений, версию андроида поменял на 14 из-за игры Алхимия