@@ -6,10 +6,10 @@ import io.appium.java_client.android.options.UiAutomator2Options;
 import lombok.NonNull;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.WebDriver;
-import ru.utils.config.ConfigReader;
+import ru.utils.propertiesReaders.ConfigReader;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 
 public class AndroidDriverProvider implements WebDriverProvider {
@@ -17,20 +17,26 @@ public class AndroidDriverProvider implements WebDriverProvider {
     @Override
     @NonNull
     public WebDriver createDriver(@NonNull Capabilities capabilities) {
-        UiAutomator2Options options = new UiAutomator2Options();
-        options.setPlatformName(ConfigReader.getOptionPlatformName());
-        options.setAutomationName(ConfigReader.getOptionAutomationName());
-        options.setDeviceName(ConfigReader.getOptionDeviceName());
-        options.setAppPackage(ConfigReader.getOptionAppPackage());
-        options.setAppActivity(ConfigReader.getOptionAppActivity()); // Или какая у тебя активность (посмотри через adb shell dumpsys)
-        options.setNoReset(false); // true - если не надо переустанавливать приложение перед каждым тестом
-        options.setFullReset(false);
-        options.setNewCommandTimeout(Duration.ofSeconds(300));
+        UiAutomator2Options options = getUiAutomator2Options();
+        options.setFullReset(ConfigReader.getOptionFullReset());
+        options.setNewCommandTimeout(Duration.ofSeconds(ConfigReader.getOptionNewCommandTimeout()));
 
         try {
-            return new AndroidDriver(new URL("http://127.0.0.1:4723"), options);
+            return new AndroidDriver(URI.create(ConfigReader.getAppiumServerUrl()).toURL(), options);
         } catch (MalformedURLException e) {
             throw new RuntimeException("Appium server URL is invalid", e);
         }
+    }
+
+    private static UiAutomator2Options getUiAutomator2Options() {
+        UiAutomator2Options options = new UiAutomator2Options();
+        options.setPlatformName(ConfigReader.getOptionPlatformName());
+        options.setPlatformVersion(ConfigReader.getOptionsPlatformVersion());
+        options.setAutomationName(ConfigReader.getOptionAutomationName());
+        options.setDeviceName(ConfigReader.getOptionDeviceName());
+        options.setAppPackage(ConfigReader.getOptionAppPackage());
+        options.setAppActivity(ConfigReader.getOptionAppActivity());
+        options.setNoReset(ConfigReader.getOptionNoReset());
+        return options;
     }
 }
